<resources>
    <string name="app_name">PPAPB-LoginFlow</string>
    <string name="title">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="visibility">visibility</string>
    <string name="register">Register</string>
    <string name="register_text">New Member?</string>
    <string name="email">Email</string>
    <string name="dashboard">Dashboard</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_text">Already Have an Account?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="by_checking_the_box_you_agree_to_our">By checking the box you agree to our</string>
    <string name="terms_and_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <string name="dial">Dial</string>
</resources>