<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingBottom="80dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilitaone_regular"
        android:layout_gravity="center"
        android:paddingBottom="50dp"
        android:text="@string/register"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/text_area"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/ic_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/username"
                android:padding="16dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_person" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="20dp"
            android:autofillHints=""
            android:hint="@string/username"
            android:textColorHint="@color/text_area_font"
            android:background="@color/transparent"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/text_area"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/ic_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email"
                android:padding="16dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_email" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="20dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:textColorHint="@color/text_area_font"
            android:background="@color/transparent"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/text_area"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/ic_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email"
                android:padding="16dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_phone" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="20dp"
            android:autofillHints=""
            android:hint="@string/phone_number"
            android:textColorHint="@color/text_area_font"
            android:background="@color/transparent"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/text_area"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/ic_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/password"
                android:padding="16dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_lock_24" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:paddingVertical="16dp"
            android:paddingHorizontal="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/text_area_font"
            android:inputType="textPassword"
            android:background="@color/transparent"/>

        <ImageButton
            android:id="@+id/btnShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:contentDescription="@string/visibility"
            android:src="@drawable/ic_visibility_off"
            android:background="@color/transparent" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/terms_and_conditions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:text="@string/register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/login"
                android:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>